<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">零零商盟(商户版)</string>
    <string name="shop_login">商户登录</string>
    <string name="login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_number_hint">请输入手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="input_verify_code_hint">请输入收到的验证码</string>
    <string name="my_customer">我的金主</string>
    <string name="customer_detail">金主信息</string>
    <string name="order_list">我的订单</string>
    <string name="pay">下单</string>
    <string name="personal_center">商户中心</string>
    <string name="my">我的</string>
    <string name="loading_data">正在加载数据..</string>
    <string name="not_data">没有数据</string>
    <string name="no_more_data_loading">无更多数据加载！</string>
    <string name="network_error">网络有问题，请检查网络是否正常！</string>
    <string name="exit">退出</string>
    <string name="enter">进入</string>
    <string name="add">增加</string>
    <string name="selected">已选</string>
    <string name="select">选择</string>
    
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    
    <string name="folder_all">所有图片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">找不到系统相机</string>
    <string name="msg_amount_limit">超过图片限制</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="province">省</string>
    <string name="city">城市</string>
    <string name="district">地区</string>

    
    
    

    <!--QRCode start-->
    <string name="app_picker_name">Applications</string>
  <string name="bookmark_picker_name">Bookmarks</string>
  <string name="button_add_calendar">Add to calendar</string>
  <string name="button_add_contact">Add contact</string>
  <string name="button_book_search">Book Search</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_custom_product_search">Custom search</string>
  <string name="button_dial">Dial number</string>
  <string name="button_email">Send email</string>
  <string name="button_get_directions">Get directions</string>
  <string name="button_mms">Send MMS</string>
  <string name="button_ok">OK</string>
  <string name="button_open_browser">Open browser</string>
  <string name="button_product_search">Product search</string>
  <string name="button_search_book_contents">Search contents</string>
  <string name="button_share_app">Application</string>
  <string name="button_share_bookmark">Bookmark</string>
  <string name="button_share_by_email">Share via email</string>
  <string name="button_share_by_sms">Share via SMS</string>
  <string name="button_share_clipboard">Clipboard</string>
  <string name="button_share_contact">Contact</string>
  <string name="button_show_map">Show map</string>
  <string name="button_sms">Send SMS</string>
  <string name="button_web_search">Web search</string>
  <string name="button_wifi">Connect to Network</string>
  <string name="contents_contact">Contact info</string>
  <string name="contents_email">Email address</string>
  <string name="contents_location">Geographic coordinates</string>
  <string name="contents_phone">Phone number</string>
  <string name="contents_sms">SMS address</string>
  <string name="contents_text">Plain text</string>
  <string name="history_clear_text">Clear history</string>
  <string name="history_clear_one_history_text">Clear</string>
  <string name="history_email_title">Barcode Scanner history</string>
  <string name="history_empty">Empty</string>
  <string name="history_empty_detail">No barcode scans have been recorded</string>
  <string name="history_send">Send history</string>
  <string name="history_title">History</string>
  <string name="menu_encode_mecard">Use MECARD</string>
  <string name="menu_encode_vcard">Use vCard</string>
  <string name="menu_help">Help</string>
  <string name="menu_history">History</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_share">Share</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_error">Error</string>
  <string name="msg_google_books">Google</string>
  <string name="msg_google_product">Google</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_invalid_value">Invalid value</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_results">Results</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_sure">Are you sure?</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
  <string name="preferences_actions_title">When a barcode is found\u2026</string>
  <string name="preferences_auto_focus_title">Use auto focus</string>
  <string name="preferences_auto_open_web_title">Open web pages automatically</string>
  <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
  <string name="preferences_bulk_mode_title">Bulk scan mode</string>
  <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
  <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
  <string name="preferences_custom_product_search_title">Custom search URL</string>
  <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
  <string name="preferences_decode_1D_product_title">1D Product</string>
  <string name="preferences_decode_Aztec_title">Aztec</string>
  <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
  <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
  <string name="preferences_decode_QR_title">QR Codes</string>
  <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
  <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
  <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
  <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
  <string name="preferences_disable_exposure_title">No exposure</string>
  <string name="preferences_disable_metering_title">No metering</string>
  <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
  <string name="preferences_front_light_title">Use front light</string>
  <string name="preferences_front_light_auto">Automatic</string>
  <string name="preferences_front_light_off">Off</string>
  <string name="preferences_front_light_on">On</string>
  <string name="preferences_general_title">General settings</string>
  <string name="preferences_history_summary">Store your scans in History</string>
  <string name="preferences_history_title">Add to History</string>
  <string name="preferences_invert_scan_title">Invert scan</string>
  <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>  
  <string name="preferences_name">Settings</string>
  <string name="preferences_orientation_title">No automatic rotation</string>
  <string name="preferences_play_beep_title">Beep</string>
  <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
  <string name="preferences_remember_duplicates_title">Remember duplicates</string>
  <string name="preferences_result_title">Result settings</string>
  <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
  <string name="preferences_search_country">Search country</string>
  <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
  <string name="preferences_supplemental_title">Retrieve more info</string>
  <string name="preferences_vibrate_title">Vibrate</string>
  <string name="result_address_book">Found contact info</string>
  <string name="result_calendar">Found calendar event</string>
  <string name="result_email_address">Found email address</string>
  <string name="result_geo">Found geographic coordinates</string>
  <string name="result_isbn">Found book</string>
  <string name="result_product">Found product</string>
  <string name="result_sms">Found SMS address</string>
  <string name="result_tel">Found phone number</string>
  <string name="result_text">Found plain text</string>
  <string name="result_uri">Found URL</string>
  <string name="result_wifi">Found WLAN Configuration</string>
  <string name="sbc_name">Google Book Search</string>
  <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <!--QRCode end  -->
    
    
    	<!-- WXPayEntryActivity -->
	<string name="pay_result_tip">提示</string>
	<string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
</resources>