<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="商户注册"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.6"
        android:scaleType="center"
        android:src="@drawable/shop_regist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="vertical"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="用户名"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/username_tv"
                android:background="@null"
                android:hint="请输入用户名"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#F0F0F0" />

        <RelativeLayout
            android:id="@+id/rl_phone_number"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/phone_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/phone_number_tv"
                android:background="@null"
                android:hint="@string/input_phone_number_hint"
                android:inputType="number"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#F0F0F0" />

        <RelativeLayout
            android:id="@+id/verify_code_rl"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="1dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/verify_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/verify_code"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/get_verify_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_border_green"
                android:gravity="center"
                android:onClick="getVerifyCode"
                android:paddingTop="6dip"
                android:paddingBottom="6dip"
                android:paddingStart="10dip"
                android:paddingEnd="10dip"
                android:text="@string/get_verify_code"
                android:textColor="@color/main_bg_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/verify_code_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/get_verify_code_tv"
                android:layout_toRightOf="@id/verify_code_tv"
                android:background="@null"
                android:hint="@string/input_verify_code_hint"
                android:inputType="number"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="25dip"
            android:background="@drawable/btn_lg_green"
            android:gravity="center"
            android:onClick="regist"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>